[gd_scene load_steps=3 format=3 uid="uid://dt3lc1wh6n1aj"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_0123"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 48

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0123")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -200.0
offset_right = 100.0
offset_bottom = -150.0
text = "LevelUp"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 150.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start New Game"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"
